sick, infection, damaged

--- a/translations/wesnoth-Non_Fatal_Wounds/es.po
+++ b/translations/wesnoth-Non_Fatal_Wounds/es.po
@@ -3,7 +3,7 @@ msgstr ""
 "Project-Id-Version: \n"
 "Report-Msgid-Bugs-To: https://bugs.wesnoth.org/\n"
 "POT-Creation-Date: 2023-01-04 05:18 UTC\n"
-"PO-Revision-Date: 2023-01-04 06:18+0100\n"
+"PO-Revision-Date: 2023-01-11 19:49+0100\n"
 "Last-Translator: \n"
 "Language-Team: \n"
 "Language: es\n"
@@ -1233,9 +1233,9 @@ msgstr ""
 "* <i>Tajo</i> (-30 % de resistencia de hoja) > Todas las unidades, herido "
 "con ataque de filo\n"
 "* <i>Infección</i> (10% de probabilidad de ser envenenado cada turno) > No "
-"mecánico o no envenenable, azar\n"
+"mecánico o no envenenable, azar pero más probable estando envenenado\n"
 "* <i>Enfermedad</i> (20 % de probabilidad de ser ralentizado cada turno) > "
-"Todas las unidades, azar\n"
+"Todas las unidades, azar pero más probable estando ralentizado\n"
 "* <i>Locura</i> (frenesí en ataques cuerpo a cuerpo) > Unidades sin "
 "habilidad de frenesí\n"
 "* <i>Mutilación</i> (-20 % PV) > Todas las unidades, azar\n"
@@ -1388,6 +1388,7 @@ msgstr "Lista de transformaciones elementales"
 msgid ""
 "* <b><i>Wound</i> +Buffs -Debuffs > Possible units and conditions = Healing "
 "method</b>\n"
+"\n"
 "* <b><i>Fire elemental</i></b> +30% fire resistance +All attacks changed to "
 "fire -20% damage -30% HP > Units with fire attacks, or wounded with fire, or "
 "on a terrain with lava or fire = 4 HP when either the attacker or defender "
@@ -1420,6 +1421,7 @@ msgid ""
 msgstr ""
 "* <b><i>Herida</i> +Bonus -Malus > Posibles unidades y condiciones = Método "
 "de curación</b>\n"
+"\n"
 "* <b><i>Elemental de fuego</i></b> +30% resistencia al fuego +Todos los "
 "ataques son de fuego -20% daño -30% PV > Unidades con ataques de fuego, o "
 "heridos con fuego, o en un terreno con lava o fuego = 4 PV cuando el "
