Floating text with scroll

--- a/translations/wesnoth-Non_Fatal_Wounds/es.po
+++ b/translations/wesnoth-Non_Fatal_Wounds/es.po
@@ -3,7 +3,7 @@ msgstr ""
 "Project-Id-Version: \n"
 "Report-Msgid-Bugs-To: https://bugs.wesnoth.org/\n"
 "POT-Creation-Date: 2023-01-04 05:18 UTC\n"
-"PO-Revision-Date: 2023-01-11 19:49+0100\n"
+"PO-Revision-Date: 2023-01-13 19:33+0100\n"
 "Last-Translator: \n"
 "Language-Team: \n"
 "Language: es\n"
@@ -1411,7 +1411,7 @@ msgid ""
 "wounded with impact, or on a cave terrain = 2 HP when either the attacker or "
 "defender are in a cave terrain, once per attack\n"
 "* <b><i>Air elemental</i></b> +40% blade +20% pierce +20% impact resistance "
-"+All attacks changed to blade -30% damage -50% HP > Units with blade "
+"+All attacks changed to blade +10% MP -30% damage -50% HP > Units with blade "
 "attacks, or birds, falcons, gryphon, bats, or wounded with blade, or on a "
 "terrain with windmill = 4 HP when either the attacker or defender are in a "
 "terrain with windmill, once per attack\n"
@@ -1445,10 +1445,11 @@ msgstr ""
 "impacto, o heridos con impacto, o en un terreno de cueva = 2 HP cuando el "
 "atacante o el defensor están en un terreno de cueva, una vez por ataque\n"
 "* <b><i>Elemental de aire</i></b> +40% resistencia a filo +20% a penetración "
-"+20% a impacto +Todos los ataques son de filo -30% daño -50% PV > Unidades "
-"con ataque de filo, pájaros, halcones, grifos o murciélagos, o heridos con "
-"filo, o en un terreno con molino de viento = 4 HP cuando el atacante o el "
-"defensor están en un terreno de molino de viento, una vez por ataque\n"
+"+20% a impacto +Todos los ataques son de filo +10% PM -30% daño -50% PV > "
+"Unidades con ataque de filo, pájaros, halcones, grifos o murciélagos, o "
+"heridos con filo, o en un terreno con molino de viento = 4 HP cuando el "
+"atacante o el defensor están en un terreno de molino de viento, una vez por "
+"ataque\n"
 "* <b><i>Todos los elementales</i></b> > Unidades mecánicas, no muertas, "
 "fantasmas, espíritus y elementales no pueden recibir ninguna herida "
 "elemental, y ninguna unidad la puede recibir dos veces"
