--- a/translations/wesnoth-Non_Fatal_Wounds/es.po
+++ b/translations/wesnoth-Non_Fatal_Wounds/es.po
@@ -2,8 +2,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: \n"
 "Report-Msgid-Bugs-To: https://bugs.wesnoth.org/\n"
-"POT-Creation-Date: 2023-01-23 19:13 UTC\n"
-"PO-Revision-Date: 2023-01-23 20:15+0100\n"
+"POT-Creation-Date: 2023-01-25 04:53 UTC\n"
+"PO-Revision-Date: 2023-01-25 05:55+0100\n"
 "Last-Translator: Toranks <toranksmervat@gmail.com>\n"
 "Language-Team: \n"
 "Language: es\n"
@@ -1274,7 +1274,7 @@ msgid ""
 "magical attacks, random\n"
 "* <b><i>Cowardice</i></b> (-20% accuracy) > Not mechanical, random, "
 "cumulative\n"
-"* <b><i>Fear of weapon</i></b> (-50% strikes and -20% accuracy against what "
+"* <b><i>Fear of weapon</i></b> (-50% strikes and -30% accuracy against what "
 "wounded them) > Not mechanical, wounded with any weapon\n"
 "* <b><i>Fear of the dark/light</i></b> (-50% strikes during the time they "
 "were wounded) > Not mechanical, wounded on day, night, or underground, "
@@ -1288,9 +1288,9 @@ msgid ""
 "ice attack or on a cold terrain, cumulative\n"
 "* <b><i>Gash</i></b> (-40% blade resistance) > All units, wounded with blade "
 "attack, cumulative\n"
-"* <b><i>Infection</i></b> (10% chance to be poisoned every turn) > Not "
+"* <b><i>Infection</i></b> (20% chance to be poisoned every turn) > Not "
 "unpoisonable, random but more probable if poisoned\n"
-"* <b><i>Sickness</i></b> (20% chance of being slowed every turn) > All "
+"* <b><i>Sickness</i></b> (30% chance of being slowed every turn) > All "
 "units, random but more probable if slowed\n"
 "* <b><i>Insanity</i></b> (berserk on melee attacks) > Units without berserk "
 "ability\n"
@@ -1325,7 +1325,7 @@ msgstr ""
 "* <b><i>Magia salvaje</i></b> (los ataques mágicos ahora tienen un 40 % de "
 "probabilidad) > Unidades con ataques mágicos, azar\n"
 "* <b><i>Cobardía</i></b> (-20 % precisión) > No mecánico, azar, acumulativo\n"
-"* <b><i>Miedo al arma</i></b> (-50% golpes y -20% precisión contra una "
+"* <b><i>Miedo al arma</i></b> (-50% golpes y -30% precisión contra una "
 "unidad que tenga el arma que lo hirió) > No mecánico, herido con cualquier "
 "arma\n"
 "* <b><i>Miedo a la oscuridad/luz</i></b> (mitad de golpes en el mismo "
@@ -1340,12 +1340,10 @@ msgstr ""
 "unidades, herido con ataque de hielo o en terreno frío, acumulativo\n"
 "* <b><i>Tajo</i></b> (-40 % resistencia al corte) > Todas las unidades, "
 "herido con ataque de filo, acumulativo\n"
-"* <b><i>Infección</i></b> (10% de probabilidad de ser envenenado cada turno) "
-"> No mecánico o no envenenable, azar pero más probable estando envenenado, "
-"acumulativo\n"
-"* <b><i>Enfermedad</i></b> (20 % de probabilidad de ser ralentizado cada "
-"turno) > Todas las unidades, azar pero más probable estando ralentizado, "
-"acumulativo\n"
+"* <b><i>Infección</i></b> (20% de probabilidad de ser envenenado cada turno) "
+"> No mecánico o no envenenable, azar pero más probable estando envenenado\n"
+"* <b><i>Enfermedad</i></b> (30 % de probabilidad de ser ralentizado cada "
+"turno) > Todas las unidades, azar pero más probable estando ralentizado\n"
 "* <b><i>Locura</i></b> (frenesí en ataques cuerpo a cuerpo) > Unidades sin "
 "habilidad de frenesí\n"
 "* <b><i>Mutilación</i></b> (-30 % PV) > Todas las unidades, azar, "
